--- a/flex.html
+++ b/flex.html
@@ -1,27 +1,16 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Bootstrap Grid Systems</title>
+<!doctype html>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="mainstyle.css">
-
-    <!--Metadata-->
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    
-    <style type="text/css">
-        .pink{
-            background: pink;
-            border: 1px solid black;
-            padding: 20px 20px;
-        }
-    </style>
-
-</head>
-<body>
-    <div id="title">
-        <h1 class="display-4" >Grid System using Bootstrap</h1>
-    </div>
+    <title>Flexbox</title>
+  </head>
+  <body>
 
     <nav class="navbar navbar-expand-md navbar-light bg-light mb-3">
         <a class="navbar-brand" href="index.html">Test</a>
@@ -50,7 +39,7 @@
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="grid.html">Grid</a>
                     <a class="dropdown-item" href="bootstrap4.html">Bootstrap 4</a>
-                    <a class="dropdown-item" href="flex.html">Flexbox else here</a>
+                    <a class="dropdown-item" href="flex.html">Flexbox</a>
                     </div>
                 </li>
             </ul>
@@ -58,39 +47,20 @@
     </nav>
 
     <div class="container">
-        <div class="row" style="margin-bottom: 30px;">
-            <div class="col-lg-6 pink">
-                COL LG 6
-            </div>
-            <div class="col-lg-6 pink">
-                COL LG 6
-            </div>
+        <h1 class="text-center text-light display-4 bg-dark">There are buttons in this Flexbox</h1>
+
+        <div class="border d-flex justify-content-between align-items-center" style="height: 200px">
+            <button class="btn-dark">Button</button>
+            <button class="btn-light">Button</button>
         </div>
-        <div class="row" style="margin-bottom: 30px;">
-            <div class="col-md-2 pink">
-                COL LG 2 SIDEBAR
-            </div>
-            <div class="col-md-8 pink">
-                COL LG 8 MAIN CONTENT
-            </div>
-            <div class="col-md-2 pink">
-                COL LG 2 SIDEBAR
-            </div>
-        </div>
-        <div class="row" style="margin-bottom: 30px;">
-            <div class="col-md-8 pink">
-                COL LG 8 MAIN CONTENT
-            </div>
-            <div class="col-md-4 pink">
-                COL LG 4 SIDEBAR
-            </div>
-        </div>
+
+
     </div>
 
-
-    <!-- Latest compiled and minified JavaScript -->
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-</body>
+  </body>
 </html>
