--- a/grid.html
+++ b/grid.html
@@ -48,9 +48,11 @@
                     Tutorial
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="grid.html">Grid</a>
-                    <a class="dropdown-item" href="bootstrap4.html">Bootstrap 4</a>
-                    <a class="dropdown-item" href="flex.html">Flexbox else here</a>
+                        <a class="dropdown-item" href="grid.html">Grid</a>
+                        <a class="dropdown-item" href="bootstrap4.html">Bootstrap 4</a>
+                        <a class="dropdown-item" href="flex.html">Flexbox else here</a>
+                        <a class="dropdown-item" href="strap4.html">Strap 4 Project</a>
+                        <a class="dropdown-item" href="candy.html">Candy</a>
                     </div>
                 </li>
             </ul>
