--- a/bootstrap4.html
+++ b/bootstrap4.html
@@ -39,6 +39,7 @@
                     <a class="dropdown-item" href="grid.html">Grid</a>
                     <a class="dropdown-item" href="bootstrap4.html">Bootstrap 4</a>
                     <a class="dropdown-item" href="flex.html">Flexbox</a>
+                    <a class="dropdown-item" href="strap4.html">Flexbox</a>
                   </div>
                 </li>
             </ul>
