--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
                     <a class="dropdown-item" href="grid.html">Grid</a>
                     <a class="dropdown-item" href="bootstrap4.html">Bootstrap 4</a>
                     <a class="dropdown-item" href="flex.html">Flexbox</a>
+                    <a class="dropdown-item" href="strap4.html">Strap 4 Project</a>
+                    <a class="dropdown-item" href="candy.html">Candy</a>
                   </div>
                 </li>
             </ul>
@@ -55,7 +57,7 @@
     </nav>
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand" href="#">Navbar Testing</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
