--- a/candy.html
+++ b/candy.html
@@ -10,7 +10,7 @@
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css?family=Nunito:200,300,400,700" rel="stylesheet">
 
-    <link rel="stylesheet" type="text/css" href="candy.css">
+    <link rel="stylesheet" type="text/css" href="css/candy.css">
 
     <!--Metadata-->
     <meta name="viewport" content="width=device-width, initial-scale=1">
