--- a/array.html
+++ b/array.html
@@ -8,24 +8,19 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-    <script src="js/list.js"></script>
+    <script src="js/array.js"></script>
 
-    <title>To-do List!</title>
+    <title>Array</title>
   </head>
   <body>
 
     <div class="container">
-      <h1 class="text-dark display-4 border-bottom border-info">To-do List</h1>
+      <h1 class="text-dark display-4 border-bottom border-info">Array Problem Sets</h1>
 
-      <h1 class="text-info">Commands</h1>
-
-      <p>"new" - Add a Todo</p>
-      <p>"list" - View All Todos</p>
-      <p>"delete" - Remove specific Todo</p>
-      <p>"quit" - Quit App</p>
+      <h1 class="text-info">This page is made for testing out Array Problem set solutions</h1>
 
       <blockquote class="blockquote">
-        <p class="mb-0">This is a block quote here.</p>
+        <p class="mb-0">An empty array is never empty</p>
         <footer class="blockquote-footer">A certain mystical Programmer in <cite title="Singapore">Source Title</cite></footer>
       </blockquote>
       <button class="btn-dark px-md-4">Like it!</button>
